# CR_4_vacancy_hh

./: .gitignore  README.md  pyproject.toml
src/: main.py  userinteraction.py  vacancies.py  vacancies_api.py  vacancies_data.py  vacancies_data_save.py  vacancy.py
tests/: test_vacancies.py  test_vacancies_api.py  test_vacancies_data.py
